[metadata]
name = ssh_mounter
version = 0.0.1
author = NlightN
author_email = oncharterliz@gmail.com
description = Helper utility for connect through sshfs and mount remote directory without using password, only with certificate
long_description = file: readme.md, license.txt
long_description_content_type = text/markdown
url = https://gitlab.com/codasteroid/basicpkg
project_urls =
    Bug Tracker = https://gitlab.com/codasteroid/basicpkg/-/issues
    repository = https://gitlab.com/codasteroid/basicpkg
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src