[metadata]
name = ssh-mounter
version = 0.0.29
author = NlightN
author_email = oncharterliz@gmail.com
description = Helper utility for connect through sshfs and mount remote directory without using password, only with certificate
long_description = file: readme.md, license.txt
long_description_content_type = text/markdown
url = https://github.com/NlightN22/ssh_mounter
project_urls =
    Bug Tracker = https://github.com/NlightN22/ssh_mounter/issues
    repository = https://github.com/NlightN22/ssh_mounter
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ssh-mounter = mounter.__main__:main
